--- a/test/test_workbench/sim/Makefile
+++ b/test/test_workbench/sim/Makefile
@@ -1,11 +1,16 @@
 TOP_NAME := top_axi_wrapper
 SRC_DIR  := ../../../core/
 SRC_FILE := $(shell find $(SRC_DIR) -name '*.svh') $(shell find $(SRC_DIR) -name '*.v') $(shell find $(SRC_DIR) -name '*.sv')
+BUILD_DIR = ../../../../build
 
 .PHONY: clean riscv-tests-build
 
 obj_dir/V$(TOP_NAME): src/* $(SRC_FILE) ../soft/start.bin
+	cp $(BUILD_DIR)/PuaMips.v ../../../core/
 	verilator --cc -Wno-fatal --exe --trace --trace-structs -LDFLAGS "-lpthread" --build src/sim_mycpu.cpp $(SRC_FILE) -I$(SRC_DIR) --top $(TOP_NAME) -j `nproc`
+
+func: obj_dir/V$(TOP_NAME)
+	./obj_dir/V$(TOP_NAME)
 
 ../soft/start.bin:
 	cd ../soft && make
