修改顶层文件

--- a/test/test_workbench/sim/Makefile
+++ b/test/test_workbench/sim/Makefile
@@ -6,8 +6,7 @@ BUILD_DIR = ../../../../build
 .PHONY: clean riscv-tests-build
 
 obj_dir/V$(TOP_NAME): src/* $(SRC_FILE) ../soft/start.bin
-	cp $(BUILD_DIR)/PuaMips.v ../../../core/
-	verilator --cc -Wno-fatal --exe --trace --trace-structs -LDFLAGS "-lpthread" --build src/sim_mycpu.cpp $(SRC_FILE) -I$(SRC_DIR) --top $(TOP_NAME) -j `nproc`
+	verilator --cc -Wno-fatal --exe --trace --trace-structs -LDFLAGS "-lpthread" --build src/sim_mycpu.cpp $(SRC_FILE) -I$(SRC_DIR) --top $(TOP_NAME)
 
 func: obj_dir/V$(TOP_NAME)
 	./obj_dir/V$(TOP_NAME)
