--- a/test/test_workbench/sim/Makefile
+++ b/test/test_workbench/sim/Makefile
@@ -2,14 +2,22 @@ TOP_NAME := top_axi_wrapper
 SRC_DIR  := ../../../core/
 SRC_FILE := $(shell find $(SRC_DIR) -name '*.svh') $(shell find $(SRC_DIR) -name '*.v') $(shell find $(SRC_DIR) -name '*.sv')
 BUILD_DIR = ../../../../build
+CHISEL_DIR = ../../../../
 
 .PHONY: clean riscv-tests-build
 
 obj_dir/V$(TOP_NAME): src/* $(SRC_FILE) ../soft/start.bin
-	verilator --cc -Wno-fatal --exe --trace --trace-structs -LDFLAGS "-lpthread" --build src/sim_mycpu.cpp $(SRC_FILE) -I$(SRC_DIR) --top $(TOP_NAME)
+	verilator --cc -Wno-fatal --exe --trace --trace-structs -LDFLAGS "-lpthread" --build src/sim_mycpu.cpp $(SRC_FILE) -I$(SRC_DIR) --top $(TOP_NAME) -j `nproc`
+
+verilog:
+	$(MAKE) -C $(CHISEL_DIR) verilog
+	cp $(CHISEL_DIR)/build/PuaCpu.v $(SRC_DIR)
+	$(MAKE) func
 
 func: obj_dir/V$(TOP_NAME)
-	./obj_dir/V$(TOP_NAME)
+	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64mi-p-access.bin -rvtest -trace 10000 -pc
+	./obj_dir/Vtop_axi_wrapper -linux -printpc
+	# ./run_riscv_test.py
 
 ../soft/start.bin:
 	cd ../soft && make
