--- a/test/test_workbench/sim/Makefile
+++ b/test/test_workbench/sim/Makefile
@@ -15,9 +15,9 @@ verilog:
 	$(MAKE) func
 
 func: obj_dir/V$(TOP_NAME)
-	./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64ua-v-lrsc.bin -rvtest -trace 100000 -pc
-	# ./obj_dir/Vtop_axi_wrapper -linux -pc -starttrace 2550000 -printpc
-	# ./obj_dir/Vtop_axi_wrapper -linux -pc -trace 100000
+	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64ua-v-lrsc.bin -rvtest -trace 100000 -pc
+	./obj_dir/Vtop_axi_wrapper -linux -pc -starttrace 127940000 -printpc
+	# ./obj_dir/Vtop_axi_wrapper -linux -pc -printpc
 	# ./obj_dir/Vtop_axi_wrapper -trace 100000 -pc
 	# ./run_riscv_test.py
 
