增加linux测试文件

--- a/test/test_workbench/sim/Makefile
+++ b/test/test_workbench/sim/Makefile
@@ -1,8 +1,8 @@
 TOP_NAME := top_axi_wrapper
 SRC_DIR  := ../../../core/
 SRC_FILE := $(shell find $(SRC_DIR) -name '*.svh') $(shell find $(SRC_DIR) -name '*.v') $(shell find $(SRC_DIR) -name '*.sv')
-BUILD_DIR = ../../../../build
-CHISEL_DIR = ../../../../
+BUILD_DIR = ../../../../chisel/build
+CHISEL_DIR = ../../../../chisel
 
 .PHONY: clean riscv-tests-build
 
