单独增加跑trace文件的功能

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ core/
 !core/top_axi_wrapper.v
 test/test_workbench/sim/trace.fst
 test/test_workbench/sim/golden_trace.txt
+test/test_workbench/sim/*.bin
