--- a/test/sim/Makefile
+++ b/test/sim/Makefile
@@ -1,8 +1,8 @@
 TOP_NAME := top_axi_wrapper
 SRC_DIR  := ../../../core/
 SRC_FILE := $(shell find $(SRC_DIR) -name '*.svh') $(shell find $(SRC_DIR) -name '*.v') $(shell find $(SRC_DIR) -name '*.sv')
-BUILD_DIR = ../../../../chisel/build
-CHISEL_DIR = ../../../../chisel/
+CHISEL_DIR = ../../../chisel
+BUILD_DIR = $(CHISEL_DIR)/build
 
 .PHONY: clean riscv-tests-build
 
