--- a/test/sim/Makefile
+++ b/test/sim/Makefile
@@ -1,5 +1,5 @@
 TOP_NAME := top_axi_wrapper
-SRC_DIR  := ../../../core/
+SRC_DIR  := ../../core
 SRC_FILE := $(shell find $(SRC_DIR) -name '*.svh') $(shell find $(SRC_DIR) -name '*.v') $(shell find $(SRC_DIR) -name '*.sv')
 CHISEL_DIR = ../../../chisel
 BUILD_DIR = $(CHISEL_DIR)/build
