--- a/test/sim/Makefile
+++ b/test/sim/Makefile
@@ -22,8 +22,9 @@ no_diff: obj_dir/V$(TOP_NAME)
 	./obj_dir/Vtop_axi_wrapper -os -pc -printpc -nodiff
 
 func: obj_dir/V$(TOP_NAME)
-	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64si-p-dirty.bin -rvtest -trace 100000 -pc
-	./obj_dir/Vtop_axi_wrapper -os -pc #-starttrace 149580000 #-nodiff -printpc
+	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64mi-p-illegal.bin -rvtest -trace 100000 -pc
+	./obj_dir/Vtop_axi_wrapper ./tests-bin/dhrystone.riscv.bin -rvtest -trace 100000 -pc
+	# ./obj_dir/Vtop_axi_wrapper -os -pc -starttrace 184530000 #-nodiff -printpc
 	# ./obj_dir/Vtop_axi_wrapper -os -pc #-printpc
 	# ./obj_dir/Vtop_axi_wrapper -trace 100000 -pc
 	# ./run_riscv_test.py
