增加clint的时钟同步功能

--- a/test/sim/Makefile
+++ b/test/sim/Makefile
@@ -13,7 +13,7 @@ verilog:
 	$(MAKE) -C $(CHISEL_DIR) verilog
 	cp $(CHISEL_DIR)/build/PuaCpu.v $(SRC_DIR)
 	# $(MAKE) no_trace
-	# $(MAKE) func
+	$(MAKE) func
 
 no_trace: obj_dir/V$(TOP_NAME)
 	./obj_dir/Vtop_axi_wrapper -os -pc -printpc 
@@ -22,12 +22,15 @@ no_diff: obj_dir/V$(TOP_NAME)
 	./obj_dir/Vtop_axi_wrapper -os -pc -printpc -nodiff
 
 func: obj_dir/V$(TOP_NAME)
-	./obj_dir/Vtop_axi_wrapper ./tests-bin/rv64mi-p-illegal.bin -rvtest -trace 100000 -pc #-delay
+	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/dhrystone.riscv.bin -rvtest -trace 100000 -pc #-delay
 	# ./obj_dir/Vtop_axi_wrapper ./tests-bin/dhrystone.riscv.bin -rvtest -trace 100000 -pc
 	# ./obj_dir/Vtop_axi_wrapper -os -pc -starttrace 184530000 #-nodiff -printpc
-	# ./obj_dir/Vtop_axi_wrapper -os -pc #-printpc
+	./obj_dir/Vtop_axi_wrapper -os -pc -printpc
 	# ./obj_dir/Vtop_axi_wrapper -trace 100000 -pc
 	# ./run_riscv_test.py
+
+perf: obj_dir/V$(TOP_NAME)
+	./obj_dir/Vtop_axi_wrapper ./tests-bin/dhrystone.riscv.bin -rvtest -trace 10000000 -pc
 
 # 生成My的trace
 trace: obj_dir/V$(TOP_NAME)
