feat: 增加测试指令的正确链接功能

--- a/test/gen_bin/makefile
+++ b/test/gen_bin/makefile
@@ -1,4 +1,4 @@
-TARGET = test_r
+TARGET = test
 
 all:./build/$(TARGET).bin
 
@@ -6,7 +6,7 @@ all:./build/$(TARGET).bin
 	riscv64-unknown-linux-gnu-objcopy -O binary ./build/$(TARGET) ./build/$(TARGET).bin
 
 ./build/$(TARGET):./build/$(TARGET).o
-	riscv64-unknown-linux-gnu-ld -o ./build/$(TARGET) ./build/$(TARGET).o
+	riscv64-unknown-linux-gnu-ld -T ./linker.ld -o ./build/$(TARGET) ./build/$(TARGET).o
 
 ./build/$(TARGET).o:./build/$(TARGET).s
 	riscv64-unknown-linux-gnu-as -o ./build/$(TARGET).o ./build/$(TARGET).s
